# cnvToPdf

./: .gitignore  CMakeLists.txt  README.md  cnvToPdf.sln  vcpkg.json
bld_vc10/: cnvToPdf.sln  cnvToPdf.vcxproj
bld_vc11/: cnvToPdf.sln  cnvToPdf.vcxproj
bld_vc12/: cnvToPdf.sln  cnvToPdf.vcxproj  cnvToPdf.vcxproj.filters
bld_vc14/: cnvToPdf.vcxproj  cnvToPdf.vcxproj.filters
bld_vc8exp/: cnvToPdf.sln  cnvToPdf.vcproj
bld_vc9/: cnvToPdf.sln  cnvToPdf.vcproj  macro.vsprops
libs_vc/bld_lib_bat/: bld.bat  bld1_fks.bat  bld1_libharu.bat  bld1_lpng.bat  bld1_zlib.bat  bld_fks.bat  bld_libharu.bat  bld_lpng.bat  bld_zlib.bat  libs_config.bat  setcc.bat
sample/: debug_gen.bat  debug_gen.sh
src/: ExArgv.c  ExArgv.h  cnvToPdf.cpp  cnvToPdf.vcxproj  cnvToPdf.vcxproj.filters  fks_fname.cpp  fks_fname.h  jpgfileToPdf.cpp  misc.hpp  stdafx.cpp  stdafx.h
src/app/: cnvToPdf.cpp  jpgFileToPdf.hpp  jpgfileToPdf.cpp  stdafx.cpp  stdafx.h
src/misc/: ExArgv.c  ExArgv.h  fname.cpp  fname.h
